<resources>
    <string name="app_name">iCampus Guardian</string>
	<string name="facebook_app_id">838943992930614</string>
	<string name="ak_login_protocol_scheme">ak838943992930614</string>
	<string name="ACCOUNT_KIT_CLIENT_TOKEN">48e671402aca5e0484ea2fcff5ba160e</string>
	<string name="open">open</string>
	<string name="close">close</string>
	<string name="welcome_title">Hello, welcome to \niCampus Guardian\n </string>
	<string name="welcome_user_term">End User License Agreement (EULA)</string>
	<string name="welcome_read_eula">Please read the EULA and click on accept to proceed to the app</string>
	<string name="welcome_user_term_content">End User License Agreement (EULA) XXXX</string>
	<string name="welcome_join_program">Join iCG User Experience Improvement Program</string>
	<string name="welcome_permission_term">Permission for school teacher to see your kid\'s sleeping information</string>
	<string name="welcome_accept">Accept</string>
	<string name="welcome_quit">Quit</string>
	<string name="login_parent_account">Login your account</string>
	<string name="login_account">Account (email)</string>
	<string name="login_password">Password (minimum 8 characters)</string>
	<string name="login_register_new_account">Sign up</string>
	<string name="login_forget_password">Forgot password?</string>
	<string name="login_login">Login</string>
	<string name="login_social_signin">Login with</string>
	<string name="login_google">Google</string>
	<string name="login_facebook">Facebook</string>
	<string name="login_error_email">Email address does not exist</string>
	<string name="login_already_used">The email address already registered, please go back to the login page to continue</string>
	<string name="login_no_network">Unable to connect to the internet</string>
	<string name="login_error_account_or_password">Invalid account (email) or password, please try again!</string>
	<string name="register_name">Name</string>
	<string name="register_password">Password (minimum 8 characters)</string>
	<string name="register_mobile">Mobile number</string>
	<string name="register_confirm_password">Confirm password</string>
	<string name="register_password_not_match">Password and confirm password do not match!</string>
	<string name="forget_reset_password">Reset your password</string>
	<string name="forget_input_original_account">Please provide the email address that you used when you signed up for your account. We will send you an email to reset your password.</string>
	<string name="forget_send">Submit</string>
	<string name="forget_back_to_login">Back to Login</string>
	<string name="forget_reset_done">Password reset confirmation</string>
	<string name="forget_account_not_exist">Email address does not exist</string>
	<string name="forget_check_mailbox_and_setup">Please check your email for continue the password reset process</string>
	<string name="setup_kid_profile">Kid\'s Profile</string>
	<string name="setup_kid_name">Kid\'s name</string>
	<string name="setup_kid_birthday">Date of Birth</string>
	<string name="setup_kid_year">Year</string>
	<string name="setup_kid_month">Month</string>
	<string name="setup_kid_day">Day</string>
	<string name="setup_kid_gender">Gender</string>
	<string name="setup_kid_male">Boy</string>
	<string name="setup_kid_female">Girl</string>
	<string name="setup_kid_height">Height</string>
	<string name="setup_kid_cm">cm</string>
	<string name="setup_kid_weight">Weight</string>
	<string name="setup_kid_kg">kg</string>
	<string name="pairing_watch_steps">Please switch to pairing view on wearable device and click on device pairing for next.</string>
	<string name="pairing_watch_pair">Pair with Device</string>
	<string name="pairing_watch_later">Do it later</string>
	<string name="pairing_watch_later_in_setting">You can go to settings and pair with your device anytime</string>
	<string name="pairing_watch_select_watch">Please select the device you are going to pair with.</string>
	<string name="pairing_watch_input_pin">Please enter the PIN code</string>
	<string name="pairing_watch_pin_error">Invalid PIN code or connection fail, please re-enter the PIN code and make sure your wearable device is near you.</string>
	<string name="pairing_watch_success">Successfully paired with %s wearable device.</string>
	<string name="pairing_watch_quit">Quit</string>
	<string name="pairing_watch_ask_permission">Application is requesting permission to turn on Bluetooth.</string>
	<string name="pairing_watch_deny">Reject</string>
	<string name="pairing_watch_accept">Allow</string>
	<string name="safty">Safety</string>
	<string name="safty_last_position">Last GPS report location</string>
	<string name="safty_enter_school">Arrive School</string>
	<string name="safty_leave_school">Leave School</string>
	<string name="safty_emergency">SOS</string>
	<string name="safty_emergency_release">SOS Dismiss</string>
	<string name="safty_no_watch_detected">No scanned data</string>
	<string name="healthy_today_reocrd">Health Summary</string>
	<string name="healthy_update_time">\'Updated\' MM/dd hh:mm</string>
	<string name="healthy_sync_failed">Data sync failed</string>
	<string name="healthy_sync">Sync</string>
	<string name="healthy_activity">PFI</string>
	<string name="healthy_steps">Steps</string>
	<string name="healthy_step">Steps</string>
	<string name="healthy_carlories">Calories Burned</string>
	<string name="healthy_cal">Kcal</string>
	<string name="healthy_walk">Walking</string>
	<string name="healthy_minutes">Mins</string>
	<string name="healthy_running">Running</string>
	<string name="healthy_cycling">Cycling</string>
	<string name="healthy_avg_bpm">Heart Rate</string>
	<string name="healthy_bpm">bpm</string>
	<string name="healthy_sleep">Sleep</string>
	<string name="healthy_hour_mins">hh \'Hrs\' mm \'Mins\'</string>
	<string name="activity">PFI</string>
	<string name="activity_very_bad">Poor</string>
	<string name="activity_bad">Not good</string>
	<string name="activity_normal">Average</string>
	<string name="activity_good">Good</string>
	<string name="activity_excellent">Excellent</string>
	<string name="activity_last_7_days">7 days</string>
	<string name="activity_today">Today</string>
	<string name="sleep_quality">Sleep Quality</string>
	<string name="sleep_quality_good">Good</string>
	<string name="sleep_quality_normal">Ok</string>
	<string name="sleep_quality_bad">bad</string>
	<string name="sleep_hours">Hours</string>
	<string name="alarm">Alarm</string>
	<string name="alarm_no_watch_synced">Not synced</string>
	<string name="alarm_syncing">Syncing…</string>
	<string name="alarm_sync">Sync</string>
	<string name="alarm_sync_complete">Synced</string>
	<string name="alarm_sync_failed">Data not synced</string>
	<string name="alarm_bluetooth_not_enable">Bluetooth is turned off</string>
	<string name="alarm_open">ON</string>
	<string name="alarm_add_new_alarm">Add Alarm</string>
	<string name="alarm_week_day">Monday to Friday</string>
	<string name="alarm_week_end">Weekend</string>
	<string name="alarm_every_day">Everyday</string>
	<string name="alarm_once">Only once</string>
	<string name="alarm_customize">Custom</string>
	<string name="alarm_period">Repeat</string>
	<string name="alarm_edit_period">Edit</string>
	<string name="alarm_delete">Delete alarm</string>
	<string name="alarm_max_alarm">Maximum number of alarm is 4</string>
	<string name="alarm_sun">Sunday</string>
	<string name="alarm_mon">Monday</string>
	<string name="alarm_tue">Tuesday</string>
	<string name="alarm_wed">Wednesday</string>
	<string name="alarm_thr">Thursday</string>
	<string name="alarm_fri">Friday</string>
	<string name="alarm_sat">Saturday</string>
	<string name="child_setup_profile">Child\'s Profile</string>
	<string name="child_basic_profile">Profile</string>
	<string name="child_goal_setting">Daily Goal</string>
	<string name="child_personalize_theme">Watch Face</string>
	<string name="child_watch_info_and_privacy">Device Information and EULA</string>
	<string name="child_pairing_watch">Link with Device</string>
	<string name="child_unbind">Unlink Device</string>
	<string name="child_photo_photo_permission">"iCampus Guardian" would like to access your photos.</string>
	<string name="child_photo_photo_hint">這樣可以讓你從圖庫中選擇你喜歡的照片當此大頭貼</string>
	<string name="child_photo_photo_deny">Don\'t Allow</string>
	<string name="child_photo_photo_ok">OK</string>
	<string name="child_photo_photo_select_pic">Select a photo</string>
	<string name="child_photo_photo_used_photo">Used photos</string>
	<string name="child_photo_photo_all_photo">All Photos</string>
	<string name="child_photo_photo">Child\'s Picture</string>
	<string name="child_photo_photo_crop">Move and Scale</string>
	<string name="parent_profile">Profile</string>
	<string name="goal_setting">Daily Goal</string>
	<string name="watch_surface">Watch Face</string>
	<string name="watch_theme_hint">這樣可讓你從圖庫中尋找照片,並經由處理後給智慧手錶使用</string>
	<string name="syncing_photo_to_watch">Sending the customized face to your watch, please do not exit the app</string>
	<string name="syncing_photo_to_watch_complete">Customized face already applied to the watch device</string>
	<string name="syncing_photo_to_watch_failed">Fail to send the customized face to your watch, please check the connection and try again!</string>
	<string name="syncing_photo_to_watch_cancel">Cancel</string>
	<string name="syncing_photo_to_watch_synced">Retry</string>
	<string name="watch_info_privacy">Device Information and EULA</string>
	<string name="send_sleeping_info_to_teacher">Permission for school teacher to see your kid\'s sleeping information</string>
	<string name="device_name_title">Device name</string>
	<string name="device_name">iCampus Guardian 1</string>
	<string name="firmware_version">Firmware Version</string>
	<string name="firmware_update">Firmware Upgrade</string>
	<string name="finding_new_firmware">Checking for update</string>
	<string name="has_latest_firmware">Your firmware is up to date.</string>
	<string name="syncing_fail">Firmware update fail</string>
	<string name="update_to_version">Firmware upgrade to V%s</string>
	<string name="udpate_by_wifi">To avoid data charge, please connect to a Wi-Fi network to download it.</string>
	<string name="watch_update_cancel">Cancel</string>
	<string name="watch_update_install">Install</string>
	<string name="firmware_download">Download the firmware</string>
	<string name="firmware_sending">Sending the updated firmware to wearable device</string>
	<string name="firmware_updating">Upgrading…</string>
	<string name="firmware_updated_complete">Firmware upgrade successful.</string>
	<string name="connect_failed">Connection Fail</string>
	<string name="insufficient_space">Not enough space in your mobile device.</string>
	<string name="pairing_watch">Link with Device</string>
	<string name="unbind_watch">Unlink Device</string>
	<string name="bind_watch">Add Device</string>
	<string name="will_unbind_watch">Confirm to unlink with child\'s wearable device</string>
	<string name="bind_cancel">Cancel</string>
	<string name="bind_confirm">Confirm</string>
	<string name="switch_to">Switch to %s</string>
	<string name="add_new_child">Add a Child</string>
	<string name="delete_child">Delete %s</string>
	<string name="app_info">About and Settings</string>
	<string name="logout">Log out</string>
	<string name="delete_tracking">To confirm remove %s from your account</string>
	<string name="delete_warning">You will not able to see the data once you delete the child from your account. You can always add it back in the future.</string>
	<string name="safty_tab">Safty</string>
	<string name="health_tab">Health</string>
	<string name="alarm_tab">Alarm</string>
	<string name="setting_tab">Settings</string>
	<string name="switch_account">Switch to %s</string>
	<string name="add_child">Add New baby</string>
	<string name="delete_account">Delete %s</string>
	<string name="drawer_setting">About and Settings</string>
</resources>